tests/fixtures/syntax/invalid/document_case_order_field.repor
# order belongs to the file scope's field whitelist only; inside a document
# case block it is unreachable in the grammar and fails as a syntax error.
document case {
  order 10
}

case "never parsed" {
  $ true
  assert {
    exit 0
  }
}
